# grpype

./: .gitignore  LICENSE  README.md  constraints.txt  pyproject.toml
config/: example_config.yaml
data/catalogs/: perera_et_al_2026_gbm_grb_catalog.csv  trigcat.csv
data/dist_coeffs/: coefficients0.002.npy  coefficients0.003.npy  coefficients0.004.npy  coefficients0.005.npy  coefficients0.007.npy  coefficients0.009.npy  coefficients0.012.npy  coefficients0.016.npy  coefficients0.022.npy  coefficients0.030.npy  coefficients0.040.npy  coefficients0.054.npy  coefficients0.073.npy  coefficients0.098.npy  coefficients0.133.npy  coefficients0.179.npy  coefficients0.242.npy  coefficients0.327.npy  coefficients0.441.npy  coefficients0.596.npy  coefficients0.804.npy  coefficients1.086.npy  coefficients1.466.npy  coefficients1.979.npy  coefficients2.671.npy  coefficients3.606.npy  coefficients4.869.npy  coefficients6.573.npy  coefficients8.873.npy  highsnr_coefficients0.002.npy  highsnr_coefficients0.003.npy  highsnr_coefficients0.004.npy  highsnr_coefficients0.005.npy  highsnr_coefficients0.007.npy  highsnr_coefficients0.009.npy  highsnr_coefficients0.012.npy  highsnr_coefficients0.016.npy  highsnr_coefficients0.022.npy  highsnr_coefficients0.030.npy  highsnr_coefficients0.040.npy  (+18 more)
examples/: basic_usage.py  parameter_estimation_example.ipynb  pipeline_example.ipynb
src/grpype/: __init__.py  _compat.py  pipeline.py
tests/: conftest.py  golden_values.npz  test.ipynb  test_config.py  test_data_handlers.py  test_detection.py  test_distribution_coeffs.py  test_gbm_gdt_equivalence.py  test_spectral_models.py  test_templates.py  test_utils.py
(+37 files in other folders)
