[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpype"
version = "0.1.0"
description = "GRB detection pipeline for Fermi GBM data."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["gamma-ray bursts", "Fermi GBM", "pipeline"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
# Core scientific stack pinned to a validated combination (pip may still warn on
# transitive deps; this documents what we test against).
dependencies = [
  "pyyaml>=6.0",
  "numpy==1.24.3",
  "scipy==1.11.4",
  "pandas==2.1.0",
  "matplotlib==3.9.4",
  "corner>=2.0",
  "emcee>=3.0",
  "healpy>=1.16",
  "tqdm>=4.66",
  "requests>=2.31",
  "joblib>=1.3",
  "astro-gdt>=2.0",
  "astro-gdt-fermi>=2.0",
  "swifttools==3.0.23",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gbm-run-pipeline = "grpype.pipeline_executers.run_pipeline:main"
gbm-run-sliced-pipeline = "grpype.pipeline_executers.run_sliced_pipeline:main"
gbm-run-short-pipeline = "grpype.pipeline_executers.run_short_pipeline:main"
gbm-run-swift-followup = "grpype.pipeline_executers.run_swift_followup:main"
gbm-run-parameter-estimation = "grpype.pipeline_executers.run_parameter_estimation:main"
gbm-run-bat-localization = "grpype.pipeline_executers.run_swift_bat_localization:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["grpype*"]
